RESOLVED FIXED300581
[EME] Video using protected audio fails to start playing after seek
https://bugs.webkit.org/show_bug.cgi?id=300581
Summary [EME] Video using protected audio fails to start playing after seek
Jean-Yves Avenard [:jya]
Reported 2025-10-12 06:10:17 PDT
When seeking in a stream containing a protected audio track, seek either do not complete or playback can't start rdar://162461088
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2025-10-12 06:14:52 PDT
EWS
Comment 2 2025-10-12 21:48:49 PDT
Committed 301391@main (e08dea1f91af): <https://commits.webkit.org/301391@main> Reviewed commits have been landed. Closing PR #52198 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.