[EME] Video using protected audio fails to start playing after seek https://bugs.webkit.org/show_bug.cgi?id=300581 rdar://162461088

Reviewed by Jer Noble.

SourceBufferPrivateAVFObjC::canEnqueueSample would have always returned false for
a protected audio sample. We revert to the behaviour prior 301011@main.

Fly-By: some comments were missed in the original review of 301011@main
which also had flagged the problem just fixed. Those were missed. Apply them now.

Added tests. They are disabled by default, will be handled in webkit.org/b/300597
Tests: http/tests/media/fairplay/fps-mse-unmuxed-audio-only-seek.html
       http/tests/media/fairplay/legacy-fairplay-mse-muxed-av-nowait.html
* LayoutTests/http/tests/media/fairplay/fps-mse-unmuxed-audio-only-seek-expected.txt: Added.
* LayoutTests/http/tests/media/fairplay/fps-mse-unmuxed-audio-only-seek.html: Added.
* LayoutTests/http/tests/media/fairplay/legacy-fairplay-mse-muxed-av-nowait-expected.txt: Added.
* LayoutTests/http/tests/media/fairplay/legacy-fairplay-mse-muxed-av-nowait.html: Added.
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:
(WebCore::SourceBufferPrivateAVFObjC::canEnqueueSample): Remove incorrect test, only applicable for video.

Canonical link: https://commits.webkit.org/301391@main